--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -76,9 +76,24 @@
                 <label class="col-sm-3 form-control-label">Mã trang nội dung:</label>
                 <div class="col-sm-9 input-group">
                     <div class="input-group-addon">
-                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <i class="fa fa-code" aria-hidden="true"></i>
                     </div>
                     <input type="text" id="txtTemplateId" class="form-control" placeholder="" value="@Html.Raw(Model.TemplateId)">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 form-control-label">Được hiện lên trang giới thiệu:</label>
+
+                <div class="col-sm-9 input-group">
+                    @if ((bool)Model.IsLandingPage)
+                    {
+                        <input type="checkbox" checked id="ckIsLandingPage">
+                    }
+                    else
+                    {
+                        <input type="checkbox" id="ckIsLandingPage">
+                    }
+
                 </div>
             </div>
 
