--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Guest/Index_REMOTE_17016.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Guest/Index_REMOTE_17016.cshtml
@@ -313,7 +313,7 @@
                                     '<button class="btn btn-danger btn-sm btn-delete" onclick="deleteGuest(' + row.GuestId + ')"><i class="fa fa-trash"></i></button>';
                             }
                             else {
-                                return '<button class="btn btn-success btn-sm" onclick="checkInGuest(' + row.GuestId + ')"><i class="fa fa-play" aria-hidden="true"></i></button>  ' +
+                                return '<button class="btn btn-success btn-sm speaker-id" onclick="checkInGuest(' + row.GuestId + ')"><i class="fa fa-play" aria-hidden="true"></i></button>  ' +
                                     '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#updateGuestModal" onclick="openModelUpdate(' + row.GuestId + ', \'' + row.GuestName + '\', \'' + row.GuestPhone + '\', \'' + row.GuestEmail + '\')"><i class="fa fa-pencil"></i></button>     ' +
                                     '<button class="btn btn-danger btn-sm btn-delete" onclick="deleteGuest(' + row.GuestId + ')"><i class="fa fa-trash"></i></button>';
                             }
@@ -346,8 +346,6 @@
                 }
             });
         }
-
-         
 
         function openModelUpdate(id, name, phone, email) {
             $('#txtNameEdit').val(name);
